--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -21,7 +21,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/share_fab"
-        android:elevation="@dimen/app_bar_elevation"
+        android:elevation="@dimen/fab_elevation"
         style="@style/share_fab"
         app:fabSize="normal"
         app:layout_anchor="@id/app_bar_layout"
